--- a/package.json
+++ b/package.json
@@ -3,10 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^1.7.9",
+    "browser-image-compression": "^2.0.2",
     "cra-template": "1.2.0",
+    "openai": "^4.77.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-markdown": "^9.0.1",
     "react-scripts": "5.0.1",
+    "tesseract.js": "^5.1.1",
     "web-vitals": "^4.2.4"
   },
   "scripts": {
